QQmlInstantiator: Avoid memory leaks

The instance model really wants to manage its objects' life cycle.
Therefore, renounce ownership of the objects when the instantiator is
cleared, so that it can do its work. Also, clear() on destruction in
order to avoid dangling objects.

Fixes: QTBUG-112151
Change-Id: Ieed0108d3c7ca3a47f3b5576e500d6cf3cfcdda4
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>